--- a/Gaze/Info.plist
+++ b/Gaze/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>LSUIElement</key>
 	<true/>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.productivity</string>
 	<key>CFBundleName</key>
 	<string>Gaze</string>
 	<key>CFBundleDisplayName</key>
