--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,8 @@
 # Developer ID Application certificate identity
 # Format: "Developer ID Application: Your Name (TEAM_ID)"
 # Find in Keychain Access or run: security find-identity -v -p codesigning
-DEVELOPER_ID_APPLICATION="Developer ID Application: Your Name (XXXXXXXXXX)"
+# Use `'` 
+DEVELOPER_ID_APPLICATION='Developer ID Application: Your Name (XXXXXXXXXX)'
 
 # Apple Team ID
 # Find at: https://developer.apple.com/account#MembershipDetailsCard
@@ -20,9 +21,9 @@ APPLE_TEAM_ID="XXXXXXXXXX"
 #   https://appleid.apple.com/account/manage
 NOTARY_KEYCHAIN_PROFILE="notary-profile"
 
-# AWS S3 Upload (Optional)
+# AWS S3 Upload - freno-me downloads bucket
 # =========================
 AWS_ACCESS_KEY_ID="your-access-key"
 AWS_SECRET_ACCESS_KEY="your-secret-key"
-AWS_BUCKET_NAME="your-bucket-name"
+AWS_BUCKET_NAME="frenomedownloads"
 AWS_REGION="us-east-1"
